Fix wrong background image link for table of contents

--- a/resources/css/_toc.less
+++ b/resources/css/_toc.less
@@ -16,7 +16,7 @@
     padding: 0 20px 20px 20px;
     overflow-x: hidden;
     overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
-    background: @color-side-navigation-bg url(../../images/body-bg.png) top left repeat;
+    background: @color-side-navigation-bg url(../images/body-bg.png) top left repeat;
     border-right: @default-border-style;
     border-top: @default-border-style;
   }
